# FreeDiscord

./: .gitignore  LICENSE  README.md  index.html  package.json  vite.config.js
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: logger.rs  main.rs
src/utils/: errorCatcher.js  logger.js
