[package]
name = "FreeDiscord"
version = "0.1.0"
description = "Proxied Discord App"
authors = ["Your Name"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = ["devtools", "tray-icon"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.23", features = ["json", "blocking", "cookies", "socks", "hickory-dns"] }
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.99"
scraper = "0.24.0"
regex = "1.11.2"
futures = "0.3"
chrono = "0.4.42"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.6.0"
url = "2.5.7"
ping = "0.6.1"
ipnet = "2.7"
dirs = "6.0.0"
http = "0.2.12"
sentry = { version = "0.42.0", features = ["log", "contexts", "panic", "backtrace", "reqwest"] }
sha1 = "0.10.5"
base64 = "0.22.1"
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
human-panic = "2.0.3"
tokio-native-tls = "0.3"
native-tls = "0.2"
open = "5"
num_cpus = "1.16"
notify-rust = "4.11.3"
flate2 = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
